--- a/ckan-docker/src/ckanext-regx/ckanext/regx/templates/edit_company1.html
+++ b/ckan-docker/src/ckanext-regx/ckanext/regx/templates/edit_company1.html
@@ -292,20 +292,20 @@
         }
     }
 
-    // Function to ensure website URL starts with https://
-    function ensureHttps(url) {
-        if (!url.startsWith('http://') && !url.startsWith('https://')) {
-            return `https://${url}`;
-        }
-        return url.replace('http://', 'https://');
-    }
-    // Update website field value on page load
-    document.addEventListener('DOMContentLoaded', function () {
-        const websiteInput = document.getElementById('website');
-        if (websiteInput) {
-            websiteInput.value = ensureHttps(websiteInput.value);
-        }
-    });
+    // // Function to ensure website URL starts with https://
+    // function ensureHttps(url) {
+    //     if (!url.startsWith('http://') && !url.startsWith('https://')) {
+    //         return `https://${url}`;
+    //     }
+    //     return url.replace('http://', 'https://');
+    // }
+    // // Update website field value on page load
+    // document.addEventListener('DOMContentLoaded', function () {
+    //     const websiteInput = document.getElementById('website');
+    //     if (websiteInput) {
+    //         websiteInput.value = ensureHttps(websiteInput.value);
+    //     }
+    // });
 
     document.querySelector("#edit_company_form").addEventListener("submit", async function (e) {
         e.preventDefault();
