--- a/ckan-docker/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/ckan-docker/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -103,20 +103,21 @@
     </div>
 </div>
 <script>
-    // Function to ensure website URL starts with https://
-    function ensureHttps(url) {
-        if (!url.startsWith('http://') && !url.startsWith('https://')) {
-            return `https://${url}`;
-        }
-        return url.replace('http://', 'https://');
-    }
-    // Update website field value on page load
-    document.addEventListener('DOMContentLoaded', function () {
-        const websiteInput = document.getElementById('website');
-        if (websiteInput) {
-            websiteInput.value = ensureHttps(websiteInput.value);
-        }
-    });
+    // // Function to ensure website URL starts with https://
+    // function ensureHttps(url) {
+    //     if (!url.startsWith('http://') && !url.startsWith('https://')) {
+    //         return `https://${url}`;
+    //     }
+    //     return url.replace('http://', 'https://');
+    // }
+    // // Update website field value on page load
+    // document.addEventListener('DOMContentLoaded', function () {
+    //     const websiteInput = document.getElementById('website');
+    //     if (websiteInput) {
+    //         websiteInput.value = ensureHttps(websiteInput.value);
+    //     }
+    // });
+    
     // Global Alert Function
     function showAlert(icon, title, text, config = {}) {
         const defaultConfig = {
